force-app/main/default/objects/Activity_Link__c/Activity_Link__c.object-meta.xml
<CustomObject>
    <description>RIVA Object</description>
    <label>Activity Link</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Activity Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>