force-app/main/default/objects/Activity_Link__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <label>ActivityId</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Activity Links</relationshipLabel>
    <relationshipName>Activity_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>