force-app/main/default/objects/Activity_Link__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activity Links</relationshipLabel>
    <relationshipName>Activity_Links</relationshipName>
    <type>Lookup</type>
</CustomField>