force-app/main/default/objects/Activity_Link__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <label>DisplayName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>