force-app/main/default/objects/Activity_Link__c/fields/DistributionType__c.field-meta.xml
<CustomField>
    <fullName>DistributionType__c</fullName>
    <label>DistributionType</label>
    <length>32</length>
    <type>Text</type>
</CustomField>