force-app/main/default/objects/Activity_Link__c/fields/IsInvitee__c.field-meta.xml
<CustomField>
    <fullName>IsInvitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInvitee</label>
    <type>Checkbox</type>
</CustomField>