force-app/main/default/objects/Activity_Link__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>32</length>
    <type>Text</type>
</CustomField>